--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,7 +9,7 @@
 <body>  
 
     <div class="gallery1">
-        <h1>Gallery Heading</h1>
+        <h1>Responsive Gallery Heading</h1>
         <div class="gallery">
             <div class="item">
                 <div class="image">
